# sdl-ttf-opengl-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
examples/: glfont.cpp
include/: SDL_glfuncs.h  sdl_ttf_base.h  sdl_ttf_font.h  sdl_ttf_wrapper.h
scripts/: sdl-ttf-opengl-cpp-config.cmake.in
scripts/cmake/: doctest.cmake  doctestAddTests.cmake
src/: font.cpp  sdl_ttf_base.cpp  sdl_ttf_wrapper.cpp
test/: CMakeLists.txt
test/include/: font_test.h  mock_sdl_ttf.h  sdl_ttf_test.h
test/src/: font_test.cpp  sdl_ttf_test.cpp
